--- a/cv-master/cv/homertemplate.tex
+++ b/cv-master/cv/homertemplate.tex
@@ -10,13 +10,13 @@ $else$
 \usepackage[sfdefault,lf,t]{carlito}
 $endif$
 \usepackage{fancyhdr}
-\pagestyle{fancy}
+% \pagestyle{fancy}
 
 % Change color to blue
 \usepackage{color,xcolor}
 $if(headcolor)$
 \definecolor{headcolor}{HTML}{$headcolor$}
-$else$Washington University in St. Louis
+$else$
 \definecolor{headcolor}{HTML}{990000}
 $endif$
 
@@ -210,20 +210,21 @@ $if(scholar)$\faicon{google} \href{https://scholar.google.com/citations?user=$sc
 %orcid
 $if(orcid)$\faicon{openid} \href{https://orcid.org/$orcid$}{$orcid$} \hspace{1 mm} $endif$%
 %website
-$if(www)$\faicon{home} \href{http://$www$}{$www$}\hspace{1 mm} $endif$%
+$if(www)$\faicon{user} \href{http://$www$}{$www$}\hspace{1 mm} $endif$%
 }
 
 \vspace{2 mm}
 \hrule
 }
+
 % Header and footer
-\pagestyle{fancy}
-\makeatletter
-\lhead{\sf\textcolor[gray]{0.4}{$if(docname)$$docname$$else$Curriculum Vitae$endif$: \@name}}
-\rhead{\sf\textcolor[gray]{0.4}{\thepage}}
-\cfoot{}
-\def\headrule{{\color[gray]{0.4}\hrule\@height\headrulewidth\@width\headwidth \vskip-\headrulewidth}}
-\makeatother
+% \pagestyle{fancy}
+% \makeatletter
+% \lhead{\sf\textcolor{gray}{$if(docname)$$docname$$else$Curriculum Vitae$endif$: \@name}}
+% \rhead{\sf\textcolor{gray}{\thepage}}
+% \cfoot{}
+% \def\headrule{\hbox to \headwidth{\color{gray}\leaders\hrule height \headrulewidth\hfill}}
+% \makeatother
 
 % Header box
 \usepackage{tabularx}
@@ -232,31 +233,6 @@ $if(www)$\faicon{home} \href{http://$www$}{$www$}\hspace{1 mm} $endif$%
 \def\name#1{\def\@name{#1}}
 \def\info#1{\def\@info{#1}}
 \makeatother
-% \newcommand{\shadebox}[3][.9]{\fcolorbox[gray]{0}{#1}{\parbox{#2}{#3}}}
-% 
-% \usepackage{calc}
-% \newlength{\headerboxwidth}
-% \setlength{\headerboxwidth}{\textwidth}
-% %\addtolength{\headerboxwidth}{0.2cm}
-% \makeatletter
-% \def\maketitle{
-% \thispagestyle{plain}
-% \vspace*{-1.4cm}
-% \shadebox[0.9]{\headerboxwidth}{\sf\color{headcolor}\hfil
-% \hbox to 0.98\textwidth{\begin{tabular}{l}
-% \\[-0.3cm]
-% \LARGE\textbf{\@name}
-% $if(position)$\\[0.1cm]\large $position$\\[0.6cm]$else$\\[0.7cm]$endif$
-% \normalsize\textbf{$if(docname)$$docname$$else$Curriculum Vitae$endif$}\\
-% \normalsize $if(date)$$date$$else$\today$endif$
-% \end{tabular}
-% \hfill\hbox{\fontsize{9}{12}\sf
-% \begin{tabular}{@{}rl@{}}
-% \@info
-% \end{tabular}}}\hfil
-% }
-% \vspace*{0.2cm}}
-% \makeatother
 
 % Section headings
 \titlelabel{}
