--- a/posts/eRas/index.qmd
+++ b/posts/eRas/index.qmd
@@ -22,13 +22,10 @@ Sys.setenv(SPOTIFY_CLIENT_SECRET = 'c6ea7afd62114def98b269c6b160721b')
 Here are the packages we'll be using. 
 
 ```{r}
-#install.packages("spotifyr")
-#install.packages("httr")
-library(spotifyr)
-library(tidyverse)
-library(knitr)
-library(httr)
-library(lubridate)
+library(spotifyr) # to access spotify API
+library(tidyverse) # for all things workflow + stringr
+library(knitr) # for pretty-ish tables
+library(lubridate) # for nice date handling 
 ```
 
 ## Spotify API
@@ -81,32 +78,21 @@ swifty |>
   kable()
 ```
 
+| Metric Name | Definition | Possible Values |
+|---------|:-----|------:|
+| *danceability*      | how suitable a track is for dancing based on a combination of musical elements including tempo, rhythm stability, beat strength, and overall regularity   | 0 -- 1 |
+| *energy*     | perceptual measure of intensity and activity by way of dynamic range, perceived loudness, timbre, onset rate, and general entropy  |   0 -- 1 |
+| *key*       | key the track is in   |   standard Pitch Class notation. [E.g. 0 = C, 1 = C♯/D♭, 2 = D, and so on](https://en.wikipedia.org/wiki/Pitch_class) |
+| *loudness*      | overall loudness of a track in decibels (dB) averaged across the entire track |  -60 -- 0 db. |
+| *mode*     | modality (major or minor) of a track; the type of scale from which its melodic content is derived  |   major = 1; minor = 0 |
+| *speechiness*       | the presence of spoken words in a track | speech-like recordings are closer to 1.0 (e.g., > 0.66 = tracks made entirely of spoken words, between 0.33 and 0.66 = tracks containing music and speech such as rap music, < 0.33 = tracks mostly music and other non-speech-like sounds |
+| *acousticness*      | confidence measure from 0.0 to 1.0 of whether the track is acoustic |    0 -- 1 |
+| *instrumentalness*     | predicts whether a track contains no vocals; "ooh" and "aah" sounds are treated as instrumental with rap and spoken word tracks clearly "vocal"  |   0 -- 1 (more vocals to less vocals) |
+| *liveness*       | detects the presence of an audience in the recording |  0 -- 1 (> 0.8 indicates strong likelihood of live track) |
+| *valence*      | musical positiveness conveyed by a track  |    0 -- 1 (low valence (e.g., sad, depressed, angry) to high valence (e.g., happy, cheerful, euphoric)) |
+| *tempo*     | overall estimated tempo of a track in beats per minute (BPM)  |  40 -- 200+ |
 
-## Metrics
-
-Some of the information is obvious, but others I had to do some exploring to learn more about. Let's review: 
-
-*danceability:* Danceability describes how suitable a track is for dancing based on a combination of musical elements including tempo, rhythm stability, beat strength, and overall regularity. A value of 0.0 is least danceable and 1.0 is most danceable.
-
-*energy:* Energy is a measure from 0.0 to 1.0 and represents a perceptual measure of intensity and activity. Typically, energetic tracks feel fast, loud, and noisy. For example, death metal has high energy, while a Bach prelude scores low on the scale. Perceptual features contributing to this attribute include dynamic range, perceived loudness, timbre, onset rate, and general entropy.
-
-*key:* The key the track is in. Integers map to pitches using standard Pitch Class notation. E.g. 0 = C, 1 = C♯/D♭, 2 = D, and so on. If no key was detected, the value is -1. (https://en.wikipedia.org/wiki/Pitch_class). Key_mode is a more helpful interpretation for us.
-
-*loudness:* The overall loudness of a track in decibels (dB). Loudness values are averaged across the entire track and are useful for comparing relative loudness of tracks. Loudness is the quality of a sound that is the primary psychological correlate of physical strength (amplitude). Values typically range between -60 and 0 db.
-
-*mode:* Mode indicates the modality (major or minor) of a track, the type of scale from which its melodic content is derived. Major is represented by 1 and minor is 0.
-
-*speechiness:* Speechiness detects the presence of spoken words in a track. The more exclusively speech-like the recording (e.g. talk show, audio book, poetry), the closer to 1.0 the attribute value. Values above 0.66 describe tracks that are probably made entirely of spoken words. Values between 0.33 and 0.66 describe tracks that may contain both music and speech, either in sections or layered, including such cases as rap music. Values below 0.33 most likely represent music and other non-speech-like tracks.
-
-*acousticness:* A confidence measure from 0.0 to 1.0 of whether the track is acoustic. 1.0 represents high confidence the track is acoustic.
-
-*instrumentalness:* Predicts whether a track contains no vocals. "Ooh" and "aah" sounds are treated as instrumental in this context. Rap or spoken word tracks are clearly "vocal". The closer the instrumentalness value is to 1.0, the greater likelihood the track contains no vocal content. Values above 0.5 are intended to represent instrumental tracks, but confidence is higher as the value approaches 1.0.
-
-*liveness:* Detects the presence of an audience in the recording. Higher liveness values represent an increased probability that the track was performed live. A value above 0.8 provides strong likelihood that the track is live.
-
-*valence:* A measure from 0.0 to 1.0 describing the musical positiveness conveyed by a track. Tracks with high valence sound more positive (e.g. happy, cheerful, euphoric), while tracks with low valence sound more negative (e.g. sad, depressed, angry).
-
-*tempo:* The overall estimated tempo of a track in beats per minute (BPM). In musical terminology, tempo is the speed or pace of a given piece and derives directly from the average beat duration.
+: Spotify's Music Metrics
 
 ```{r include = FALSE}
 # NOTES TO SELF
@@ -131,14 +117,14 @@ Some of the information is obvious, but others I had to do some exploring to lea
 
 For my first bit of exploration, I'm wondering how much a difference Taylor made in how Taylory Taylor is. 
 
-First, let's add a boolean that tells us if a song is Taylor's Version. Dirty data problem 1 of ???: tick marks vs. apostrophes. And this is why we use unicode, friends. 
+First, let's add a boolean that tells us if a song is Taylor's Version. Dirty data problem 1 of ???: tick marks vs. apostrophes. And this is why we use [unicode](https://home.unicode.org/), friends. 
 
 ```{r}
 swifty <- swifty |> 
   mutate(isTV = str_detect(track_name, "Taylor's Version|Taylor’s Version")) 
 ```
 
-Now that we have TV as it's own variable, we can make our data one step closer to at least first normal form (https://www.geeksforgeeks.org/normal-forms-in-dbms/) by making sure that track name contains only one type of information: the track name.  
+Now that we have TV as it's own variable, we can make our data one step closer to some sort of [normal form](https://www.geeksforgeeks.org/normal-forms-in-dbms/) by making sure that track name contains one and only one type of information: the track name. 
 
 ::: {.callout-tip}
 ## Tip: stringr
