--- a/projects.qmd
+++ b/projects.qmd
@@ -10,4 +10,4 @@ listing:
 page-layout: full
 ---
 
-Here are some of my projects.
+Here are some of my personal projects, tutorials, and blog(ish).
